--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ cardinal_components_version = 6.1.2
 cloth_version=15.0.140
 sodium_version=mc1.21.1-0.6.7-fabric
 modmenu_version=11.0.3
+tyrannus_version=v0.4.1-1.21.1
