--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,13 @@ repositories {
         }
     }
     maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+        content {
+            includeGroup 'maven.modrinth'
+        }
+    }
+    maven {
         name = "My Library"
         url = "https://jitpack.io"
     }
@@ -61,6 +68,7 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+    modRuntimeOnly "maven.modrinth:sodium:${sodium_version}"
     modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     modImplementation include("com.github.MrSypz:Tyrannus:${tyrannus_version}")
