--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ sodium_version=mc1.21.1-0.6.7-fabric
 modmenu_version=11.0.3
 tyrannus_version=v0.4.1-1.21.1
 jade_version=15.10.2+fabric
+player_anim=2.0.1+1.21.1
+bendylib_version=5.1
