--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 
     modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-base:${cardinal_components_version}")
     modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}")
+    modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-world:${cardinal_components_version}")
 
     modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}") {
         exclude(group: "net.fabricmc.fabric-api")
