--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,10 @@ fabric_version=0.115.1+1.21.1
 
 cardinal_components_version = 6.1.2
 cloth_version=15.0.140
-sodium_version=mc1.21.1-0.6.7-fabric
+sodium_version=mc1.21.1-0.6.9-fabric
 modmenu_version=11.0.3
 tyrannus_version=v0.4.1-1.21.1
 jade_version=15.10.2+fabric
 player_anim=2.0.1+1.21.1
 bendylib_version=5.1
+veil_version=2.3.2
