--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.14
 # Mod Properties
-mod_version=0.0.5-09162025
+mod_version=0.0.6
 maven_group=sypztep
 archives_base_name=mamy
 # Dependencies
